crates/reinhardt-pages/tests/ui/server_fnset/fail/invalid_item.rs
use reinhardt_pages::server_fn::server_fnset;

#[server_fnset(name = "admin")]
struct AdminFns;

fn main() {}
