crates/reinhardt-pages/tests/ui/server_fnset/fail/invalid_item.stderr
error: `server_fnset` can only be applied to a function or inherent impl
 --> tests/ui/server_fnset/fail/invalid_item.rs:4:1
  |
4 | struct AdminFns;
  | ^^^^^^^^^^^^^^^^
